--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <span>What is your budget?</span>
         <span color="blue">From $300,000 to $500,000</span>
         <label for="budget" name="budget" id="budget"></label>
-        <input type="number" name="budget" id="budget" required min="" max="">
+        <input type="number" name="budget" id="budget" required min="0" max="10">
         <br>
+
 
 
 
